--- a/package.json
+++ b/package.json
@@ -14,8 +14,8 @@
     "babel-plugin-prismjs": "^2.1.0",
     "codemirror": "^6.0.1",
     "font-awesome": "^4.7.0",
-    "prismjs": "^1.29.0",
     "react": "^18.2.0",
+    "react-codemirror2": "^7.3.0",
     "react-dom": "^18.2.0",
     "react-iframe": "^1.8.5",
     "react-scripts": "5.0.1",
