--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "@fortawesome/free-regular-svg-icons": "^6.5.1",
     "@fortawesome/free-solid-svg-icons": "^6.5.1",
     "@fortawesome/react-fontawesome": "^0.2.0",
+    "@monaco-editor/react": "^4.6.0",
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
@@ -15,7 +16,6 @@
     "codemirror": "^6.0.1",
     "font-awesome": "^4.7.0",
     "react": "^18.2.0",
-    "react-codemirror2": "^7.3.0",
     "react-dom": "^18.2.0",
     "react-iframe": "^1.8.5",
     "react-scripts": "5.0.1",
