--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "babel-plugin-prismjs": "^2.1.0",
     "codemirror": "^6.0.1",
     "font-awesome": "^4.7.0",
+    "monaco-editor": "^0.45.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-iframe": "^1.8.5",
